# dynamic-pricing-example

./: .coverage  .gitignore  README.md  docker-compose.yml  hello.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: code-quality.yml  docker-build.yml  python-tests.yml
docker/api-service/: Dockerfile
docker/jupyter/: Dockerfile
docker/ml-service/: Dockerfile
docker/postgres/: init.sql
docker/test-runner/: Dockerfile
docs/: deployment.md
infrastructure/aws/: cloudformation.yaml  deploy.py
infrastructure/prefect/: deploy_aws.py  flows.py  run_local.py
infrastructure/snowflake/: setup.sql
models/: decision_tree_20250413224653.joblib  random_forest_20250413224919.joblib  random_forest_20250413233145.joblib
notebooks/: model_exploration.ipynb
src/data/: generator.py
src/ml/: app.py  feature_improvements.py  features.py  model.py  model_improvements.py  models.py  monitoring.py  train.py
src/tests/: conftest.py
src/tests/e2e/: test_system.py
src/tests/integration/: test_api.py
src/tests/unit/: test_model.py
