[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-example"
version = "0.1.0"
description = "Dynamic pricing system for car insurance using machine learning models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Dynamic Pricing Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[tool.setuptools]
packages = ["src"]
